--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>WebCuoiKhoa</title>
 </head>
 <body>
+    <header>
+        <a href="#" class="logo">SA</a>
+        <ul>
+            <li><a href="index.html"  class="mainchoice" onclick="backgroundcolor()">Home</a></li>
+            <li><a href="" class="mainchoice" onclick="backgroundcolor()">Account</a></li>
+            <li><a href="" class="mainchoice" onclick="backgroundcolor()">Work</a></li>
+            <li><a href="" id="active" class="mainchoice" onclick="backgroundcolor()">Contact</a></li>
+        </ul>
+    </header>
     
 </body>
 </html>
