--- a/contact.html
+++ b/contact.html
@@ -15,21 +15,20 @@
     <title>MidAutumn</title>
 </head>
 <header>
-    <nav class="navbar">
-      <a href="#" class="logo">
-        <img src="" alt="SA">
-      </a>
-      <ul class="menu-links">
-        <li><a href="#">GG</a></li>
-        <li><a href="#">EXPLORE</a></li>
-        <li><a href="contact.html">CONTACT US</a></li>
-        <li><a href="login.html">SIGN IN    </a></li>
-        <li class="join-btn"><a href="login.html">Join Us</a></li>
-        <span id="close-menu-btn" class="material-symbols-outlined">close</span>
-      </ul>
-      <span id="hamburger-btn" class="material-symbols-outlined">menu</span>
-    </nav>
-  </header>
+  <nav class="navbar">
+    <a href="#" class="logo">
+      <img src="" alt="SA">
+    </a>
+    <ul class="menu-links">
+      <li><a href="explore.html">EXPLORE</a></li>
+      <li><a href="contact.html">CONTACT US</a></li>
+      <li><a href="index.html">HOME</a></li>
+      <li class="join-btn"><a href="login.html">Join Us</a></li>
+      <span id="close-menu-btn" class="material-symbols-outlined">close</span>
+    </ul>
+    <span id="hamburger-btn" class="material-symbols-outlined">menu</span>
+  </nav>
+</header>
 <body id="ctbody">
     <div class="contact"></div>
     <div class="wrap">
