--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <script src="https://kit.fontawesome.com/49fa56e081.js" crossorigin="anonymous"></script>
     <title>WebCuoiKhoa</title>
 </head>
 <body>
@@ -13,18 +15,113 @@
             <img src="" alt="SA">
           </a>
           <ul class="menu-links">
-            <li><a href="#">GG</a></li>
-            <li><a href="#">EXPLORE</a></li>
+            <li><a href="explore.html">EXPLORE</a></li>
             <li><a href="contact.html">CONTACT US</a></li>
-            <li><a href="login.html">SIGN IN    </a></li>
+            <li><a href="index.html">HOME</a></li>
             <li class="join-btn"><a href="login.html">Join Us</a></li>
             <span id="close-menu-btn" class="material-symbols-outlined">close</span>
           </ul>
           <span id="hamburger-btn" class="material-symbols-outlined">menu</span>
         </nav>
       </header>
-      
-    
+      <div class="carousel">
+        <div class="img-slider">
+          <div class="slide">
+            <img src="http://s1.bwallpapers.com/wallpapers/2014/07/29/flower-in-blue-sky_083956903.jpg" alt="">
+            <div class="info">
+              <h2>slide 01</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi vero qui, asperiores nam maxime magni ducimus? Adipisci fugiat voluptas consectetur enim quos voluptatem, corrupti consequuntur consequatur. Necessitatibus provident consectetur cum.</p>
+            </div>
+          </div>
+          <div class="slide">
+            <img src="https://images.search.yahoo.com/images/view;_ylt=Awr9.5r1ncBlAygKp3yJzbkF;_ylu=c2VjA3NyBHNsawNpbWcEb2lkAzA0NjZlZjNlZDEzZWQzNTNkNGZjYTFkZjQyMTU0NWRhBGdwb3MDMQRpdANiaW5n?back=https%3A%2F%2Fimages.search.yahoo.com%2Fsearch%2Fimages%3Fp%3Dchart%2Bjs%26type%3DE210US105G0%26fr%3Dmcafee%26fr2%3Dpiv-web%26tab%3Dorganic%26ri%3D1&w=1280&h=720&imgurl=i.ytimg.com%2Fvi%2Ff-7uQXGur2o%2Fmaxresdefault.jpg&rurl=https%3A%2F%2Fgregoryboxij.blogspot.com%2F2021%2F04%2F31-javascript-charts-js-examples.html&size=55.0KB&p=chart+js&oid=0466ef3ed13ed353d4fca1df421545da&fr2=piv-web&fr=mcafee&tt=31+Javascript+Charts+Js+Examples+-+Modern+Javascript+Blog&b=0&ni=21&no=1&ts=&tab=organic&sigr=azgR6WDWIJ9H&sigb=1weoYvaNUE4P&sigi=HJQQZJ6GTldE&sigt=86NSkLELehsh&.crumb=78T2.UCdpQR&fr=mcafee&fr2=piv-web&type=E210US105G0" alt="">
+            <div class="info">
+              <h2>slide 01</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi vero qui, asperiores nam maxime magni ducimus? Adipisci fugiat voluptas consectetur enim quos voluptatem, corrupti consequuntur consequatur. Necessitatibus provident consectetur cum.</p>
+            </div>
+          </div>
+          <div class="slide">
+            <img src="https://images.search.yahoo.com/images/view;_ylt=Awr9.5r1ncBlAygKp3yJzbkF;_ylu=c2VjA3NyBHNsawNpbWcEb2lkAzA0NjZlZjNlZDEzZWQzNTNkNGZjYTFkZjQyMTU0NWRhBGdwb3MDMQRpdANiaW5n?back=https%3A%2F%2Fimages.search.yahoo.com%2Fsearch%2Fimages%3Fp%3Dchart%2Bjs%26type%3DE210US105G0%26fr%3Dmcafee%26fr2%3Dpiv-web%26tab%3Dorganic%26ri%3D1&w=1280&h=720&imgurl=i.ytimg.com%2Fvi%2Ff-7uQXGur2o%2Fmaxresdefault.jpg&rurl=https%3A%2F%2Fgregoryboxij.blogspot.com%2F2021%2F04%2F31-javascript-charts-js-examples.html&size=55.0KB&p=chart+js&oid=0466ef3ed13ed353d4fca1df421545da&fr2=piv-web&fr=mcafee&tt=31+Javascript+Charts+Js+Examples+-+Modern+Javascript+Blog&b=0&ni=21&no=1&ts=&tab=organic&sigr=azgR6WDWIJ9H&sigb=1weoYvaNUE4P&sigi=HJQQZJ6GTldE&sigt=86NSkLELehsh&.crumb=78T2.UCdpQR&fr=mcafee&fr2=piv-web&type=E210US105G0" alt="">
+            <div class="info">
+              <h2>slide 01</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi vero qui, asperiores nam maxime magni ducimus? Adipisci fugiat voluptas consectetur enim quos voluptatem, corrupti consequuntur consequatur. Necessitatibus provident consectetur cum.</p>
+            </div>
+          </div>
+          <div class="slide">
+            <img src="" alt="">
+            <div class="info">
+              <h2>slide 01</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi vero qui, asperiores nam maxime magni ducimus? Adipisci fugiat voluptas consectetur enim quos voluptatem, corrupti consequuntur consequatur. Necessitatibus provident consectetur cum.</p>
+            </div>
+          </div>
+          <div class="navigation">
+            <div class="btn"></div>
+            <div class="btn"></div>
+            <div class="btn"></div>
+            <div class="btn"></div>
+            <div class="btn"></div>
+          </div>
+        </div>
+      </div>
+      <div class="infor">
+        <h1 id="inf">MidAutumn</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, inventore?
+         Modi id consequatur amet, adipisci aliquid voluptatem perferendis fugiat
+         , dicta magnam officia odit, voluptatum quis sunt aperiam cupiditate similique! Ipsa?
+         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, inventore?
+         Modi id consequatur amet, adipisci aliquid voluptatem perferendis fugiat
+         , dicta magnam officia odit, voluptatum quis sunt aperiam cupiditate similique!
+         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, inventore?
+         Modi id consequatur amet, adipisci aliquid voluptatem perferendis fugiat
+         , dicta magnam officia odit, voluptatum quis sunt aperiam cupiditate similique!
+         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, inventore?
+         Modi id consequatur amet, adipisci aliquid voluptatem perferendis fugiat
+         , dicta magnam officia odit, voluptatum quis sunt aperiam cupiditate similique!
+         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, inventore?
+         Modi id consequatur amet, adipisci aliquid voluptatem perferendis fugiat
+         , dicta magnam officia odit, voluptatum quis sunt aperiam cupiditate similique!
+         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, inventore?
+         Modi id consequatur amet, adipisci aliquid voluptatem perferendis fugiat
+         , dicta magnam officia odit, voluptatum quis sunt aperiam cupiditate similique!</p>
+    </div>
+      <div class="information">
+        <div id="services">
+          <div class="container">
+              <!-- <h1 class="sub-title">My Services</h1> -->
+          </div>
+          <div class="services-list">
+              <div>
+                <i class="fa-solid fa-chart-simple"></i>
+                  <h2></h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto deserunt quod nemo consequatur earum nam, architecto aliquid molestias dolores vel.</p>
+                  <a href="#">Learn more</a>
+              </div>
+              <div>
+                <i class="fa-solid fa-chart-simple"></i>
+                  <h2></h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto deserunt quod nemo consequatur earum nam, architecto aliquid molestias dolores vel.</p>
+                  <a href="#">Learn more</a>
+              </div>
+              <div>
+                <i class="fa-solid fa-chart-simple"></i>
+                  <h2></h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto deserunt quod nemo consequatur earum nam, architecto aliquid molestias dolores vel.</p>
+                  <a href="#">Learn more</a>
+              </div>
+          </div>
+       </div>
+      </div>
+      <footer class="footer">
+        <div class="footer-col">
+          <h4>follow us</h4>
+          <div class="social-links">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </footer>\
 </body>
 <script>
     const header = document.querySelector("header");
