--- a/login.html
+++ b/login.html
@@ -17,10 +17,9 @@
         <img src="" alt="SA">
       </a>
       <ul class="menu-links">
-        <li><a href="#">GG</a></li>
-        <li><a href="#">EXPLORE</a></li>
+        <li><a href="explore.html">EXPLORE</a></li>
         <li><a href="contact.html">CONTACT US</a></li>
-        <li><a href="login.html">SIGN IN    </a></li>
+        <li><a href="index.html">HOME</a></li>
         <li class="join-btn"><a href="login.html">Join Us</a></li>
         <span id="close-menu-btn" class="material-symbols-outlined">close</span>
       </ul>
