--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/49fa56e081.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css/stylecontact.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" href="assets/img/logo1.jpg" type="image/x-icon">
-    <script type="text/javascript"
-  src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script type="text/javascript">
-            emailjs.init('1WidsGZ_WfBE50R4e')
-    </script>
-    <title>MidAutumn</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/49fa56e081.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="assets/css/stylecontact.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="shortcut icon" href="assets/img/logo1.jpg" type="image/x-icon">
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script type="text/javascript">
+    emailjs.init('1WidsGZ_WfBE50R4e')
+  </script>
+  <script src="assets/js/contact.js"></script>
+  <title>MidAutumn</title>
 </head>
 <header>
   <nav class="navbar">
@@ -29,55 +30,61 @@
     <span id="hamburger-btn" class="material-symbols-outlined">menu</span>
   </nav>
 </header>
+
 <body id="ctbody">
-    <div class="contact"></div>
-    <div class="wrap">
-        <div class="logocont">
-            <img src="assets/img/logo1.jpg" alt="">
-        </div>
-        <div class="cont">
-            <h1>Contact Me</h1>
-            <div id="formct">
-                <form action="">
-                    <input type="text" placeholder="Your Name" id="Name">
-                    <input type="email" placeholder="Email" id="Mail">
-                    <input type="phone" name="" id="Phone" placeholder="Your Number">
-                    <textarea name="" id="Message" cols="30" rows="10" placeholder="Message"></textarea> 
-                </form>
-                <button onclick="SendEmail()" id="subbut" >Submit</button >
-            </div>
-        </div>
+  <div class="contact"></div>
+  <div class="wrap">
+    <div class="logocont">
+      <img src="assets/img/logo1.jpg" alt="">
     </div>
+    <div class="cont">
+      <h1>Contact Me</h1>
+      <div id="formct">
+        <form action="">
+          <input type="text" placeholder="Your Name" id="Name">
+          <input type="email" placeholder="Email" id="Mail">
+          <input type="phone" name="" id="Phone" placeholder="Your Number">
+          <textarea name="" id="Message" cols="30" rows="10" placeholder="Message"></textarea>
+          <button id="subbut" type="submit">Submit</button>
+        </form>
+
+      </div>
+    </div>
+  </div>
 </body>
 <!-- <script src="assets/js/main.js"></script> -->
 <script>
-        var formcontact = document.querySelector("form")
-        console.log(formcontact)
-    function SendEmail(){
+  var formcontact = document.querySelector("form");
+  var subbut = document.getElementById("subbut");
+  console.log(subbut)
+  subbut.addEventListener("click", function (e) {
+    e.preventDefault()
+    SendEmail()
+  })
+  function SendEmail() {
+    var param = {
+      your_name: document.getElementById("Name").value,
+      email_id: document.getElementById("Mail").value,
+      number_id: document.getElementById("Phone").value,
+      message_id: document.getElementById("Message").value
+    }
+    emailjs.send("service_0q01yyw", "template_zlu68ls", param).then(function (res) {
+      // res.preventDefault()
+      alert("success" + res.status)
 
-        var param = {
-            your_name: document.getElementById("Name").value,
-            email_id:  document.getElementById("Mail").value,
-            number_id: document.getElementById("Phone").value,
-            message_id: document.getElementById("Message").value
-
-        }
-        emailjs.send("service_0q01yyw","template_zlu68ls",param).then(function(res){
-            // res.preventDefault()
-            alert("success" + res.status)
-            
-        });
+    });
 
 
-}
+  }
 </script>
 <script>
-    const header = document.querySelector("header");
-    const hamburgerBtn = document.querySelector("#hamburger-btn");
-    const closeMenuBtn = document.querySelector("#close-menu-btn");
-    // Toggle mobile menu on hamburger button click
-    hamburgerBtn.addEventListener("click", () => header.classList.toggle("show-mobile-menu"));
-    // Close mobile menu on close button click
-    closeMenuBtn.addEventListener("click", () => hamburgerBtn.click());
-  </script>
+  const header = document.querySelector("header");
+  const hamburgerBtn = document.querySelector("#hamburger-btn");
+  const closeMenuBtn = document.querySelector("#close-menu-btn");
+  // Toggle mobile menu on hamburger button click
+  hamburgerBtn.addEventListener("click", () => header.classList.toggle("show-mobile-menu"));
+  // Close mobile menu on close button click
+  closeMenuBtn.addEventListener("click", () => hamburgerBtn.click());
+</script>
+
 </html>
