--- a/explore.html
+++ b/explore.html
@@ -36,15 +36,15 @@
                 </div>
                 <div class="column">
                     <label for="email">Income</label>
-                    <input type="email" id="email" placeholder="Your email here">
+                    <input type="number" id="email" placeholder="Your email here">
                 </div>
             </div>
             <div class="row">
                 <div class="column">
                     <label for="contact">OutCome</label>
-                    <input type="tel" id="contact" placeholder="Food">
-                    <input type="tel" id="contact" placeholder="Entertain">
-                    <input type="tel" id="contact" placeholder="Other">s
+                    <input type="number" id="contact" placeholder="Food">
+                    <input type="number" id="contact" placeholder="Entertain">
+                    <input type="number" id="contact" placeholder="Other">
                 </div>
                 <div class="column">
                     <label for="contact">Target</label>
@@ -62,6 +62,9 @@
     </div>
 </body>
 </html>
+<script type="module" src="">
+    
+</script>
     
 </body>
 </html>
