--- a/explore.html
+++ b/explore.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Form</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/explore.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- <link rel="stylesheet" href="assets/css/stylelogin.css"> -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 
 </head>
+
 <body>
     <header>
         <nav class="navbar">
-          <a href="#" class="logo">
-            <img src="" alt="SA">
-          </a>
-          <ul class="menu-links">
-            <li><a href="explore.html">EXPLORE</a></li>
-            <li><a href="contact.html">CONTACT US</a></li>
-            <li><a href="index.html">HOME</a></li>
-            <li class="join-btn"><a href="login.html">Join Us</a></li>
-            <span id="close-menu-btn" class="material-symbols-outlined">close</span>
-          </ul>
-          <span id="hamburger-btn" class="material-symbols-outlined">menu</span>
+            <a href="#" class="logo">
+                <img src="" alt="SA">
+            </a>
+            <ul class="menu-links">
+                <li><a href="explore.html">EXPLORE</a></li>
+                <li><a href="contact.html">CONTACT US</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li class="join-btn"><a href="login.html">Join Us</a></li>
+                <span id="close-menu-btn" class="material-symbols-outlined">close</span>
+            </ul>
+            <span id="hamburger-btn" class="material-symbols-outlined">menu</span>
         </nav>
-      </header>
+    </header>
     <div class="container">
         <h1>ANALYSIS FORM</h1>
         <p>Creat your financial chart by this form</p>
@@ -61,10 +65,12 @@
         </form>
     </div>
 </body>
+
 </html>
 <script type="module" src="">
-    
+
 </script>
-    
+
 </body>
+
 </html>
