--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/49fa56e081.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="assets/css/stylecontact.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="shortcut icon" href="assets/img/logo1.jpg" type="image/x-icon">
+  <link rel="stylesheet" href="../css/stylecontact.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="shortcut icon" href="../img/logo1.jpg" type="image/x-icon">
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script type="text/javascript">
     emailjs.init('1WidsGZ_WfBE50R4e')
@@ -37,6 +37,7 @@
     <div class="logocont">
       <img src="assets/img/logo1.jpg" alt="">
     </div>
+
     <div class="cont">
       <h1>Contact Me</h1>
       <div id="formct">
@@ -74,7 +75,6 @@
       alert("success" + res.status)
 
     });
-
 
   }
 </script>
