--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-</head>
-<body>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/64d58efce2.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="module" src="app.js"></script>
-</body>
+  </body>
 </html>
