--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     ></script>
   </head>
   <body>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="module" src="app.js"></script>
   </body>
